argocd/manifests/health-archive/base/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: health-ingester-redirect-https
  namespace: health-archive
spec:
  redirectScheme:
    scheme: https
    permanent: true
