argocd/manifests/health-archive/base/service-ingester.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-ingester
  namespace: health-archive
  labels:
    app: health-ingester
spec:
  type: ClusterIP
  selector:
    app: health-ingester
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
