argocd/manifests/health-archive/base/ingress-ingester.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingester
  namespace: health-archive
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: health-archive-health-ingester-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: health-ingester.levangie.dev
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - health-ingester.levangie.dev
  rules:
    - host: health-ingester.levangie.dev
      http:
        paths:
          - path: /api/v1/health-connect
            pathType: Prefix
            backend:
              service:
                name: health-ingester
                port:
                  number: 80
